--- a/website/_quarto.yml
+++ b/website/_quarto.yml
@@ -8,11 +8,11 @@ website:
     background: primary
     search: true
     left:
-      - href: index.qmd
+      - href: index.html
         text: Home
-      - href: about.qmd
+      - href: about.html
         text: About
-      - href: analysis.qmd
+      - href: analysis.html
         text: Example Analysis
 
 format:
